# Learned-Cache-Simulator

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/traces/: bst.txt  linkedlist.txt  matmul.txt
scripts/: capture_traces.sh  download_traces.sh
src/cachesim/: __init__.py  benchmark.py  cli.py  features.py  ml_policy.py  plotting.py  policies.py  simulator.py  trace.py
tests/: test_ml_policy.py  test_policies.py  test_simulator.py  test_trace.py
tools/: gen_real_trace.c
