[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learned-cache-sim"
version = "0.1.0"
description = "Benchmark a learned cache-replacement predictor against LRU and other classic policies on memory access traces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shazif Ahmed" }]
dependencies = [
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.scripts]
cachesim = "cachesim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
